Style bluetooth pairing dialog correctly for MD2

Bug: 846488
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ib5e5fcc8b6eb51016c0a9a0f682a4afc4c657210
Reviewed-on: https://chromium-review.googlesource.com/1072923
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561914}
Former-commit-id: 41591cdd39fc766f18cc65d0d33cae9e56b65307